--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.7.7",
+    "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-preset-es2015": "^6.6.0"
   }
 }
