Made namespace a configurable option. Also did some code cleanup.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
         "outDir": "build"
     },
     "exclude": [
-        "node_modules",
+        "node_modules/*",
         "typings/browser",
         "typings/browser.d.ts"
     ],
