--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Laravel Echo library for beautiful Pusher integration",
   "main": "dist/echo.js",
   "scripts": {
-    "compile": "./node_modules/.bin/babel -d dist/ src/",
+    "compile": "rollup -c",
     "prepublish": "npm run compile"
   },
   "repository": {
@@ -13,7 +13,8 @@
   },
   "keywords": [
     "laravel",
-    "pusher"
+    "pusher",
+    "socket.io"
   ],
   "author": {
     "name": "Taylor Otwell"
@@ -21,9 +22,11 @@
   "homepage": "https://github.com/laravel/echo",
   "dependencies": {},
   "devDependencies": {
-    "babel-cli": "^6.7.7",
     "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-2": "^6.5.0"
+    "babel-preset-es2015-rollup": "^1.1.1",
+    "babel-preset-stage-2": "^6.5.0",
+    "rollup": "^0.29.0",
+    "rollup-plugin-babel": "^2.4.0",
+    "rollup-plugin-node-resolve": "^1.5.0"
   }
 }
