--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-preset-es2015-rollup": "^1.1.1",
     "babel-preset-stage-2": "^6.5.0",
+    "pusher-js": "^3.2.1",
     "rollup": "^0.31.0",
     "rollup-plugin-babel": "^2.4.0",
     "rollup-plugin-typescript": "^0.7.5",
