--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
     "name": "Taylor Otwell"
   },
   "homepage": "https://github.com/laravel/echo",
+  "engines": {
+    "node": ">6.0.*"
+  },
   "dependencies": {},
   "devDependencies": {
+    "@types/node": "^6.0.85",
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-stage-2": "^6.5.0",
     "pusher-js": "^3.2.1",
     "rollup": "^0.31.0",
     "rollup-plugin-babel": "^2.4.0",
-    "rollup-plugin-typescript": "^0.7.5",
-    "typings": "^1.0.4"
+    "rollup-plugin-typescript": "^0.7.5"
   }
 }
