Open tsconfig.js strict mode

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "devDependencies": {
     "@types/jest": "^22.1.0",
     "@types/node": "^6.0.85",
+    "@types/pusher-js": "^4.2.0",
+    "@types/socket.io-client": "^1.4.32",
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-stage-2": "^6.5.0",
