--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Laravel Echo library for beautiful Pusher and Socket.IO integration",
   "main": "dist/echo.js",
   "scripts": {
+    "build": "npm run compile && npm run declarations",
     "compile": "./node_modules/.bin/rollup -c",
-    "prepublish": "npm run compile",
+    "declarations": "./node_modules/.bin/tsc --emitDeclarationOnly",
+    "prepublish": "npm run build",
     "test": "jest"
   },
   "repository": {
@@ -32,10 +34,12 @@
     "babel-preset-stage-2": "^6.5.0",
     "jest": "^22.1.0",
     "pusher-js": "^3.2.1",
+    "rollup": "^0.67.3",
     "rollup-plugin-babel": "^2.4.0",
-    "rollup-plugin-typescript": "^0.7.5",
-    "rollup": "^0.31.0",
-    "ts-jest": "^22.0.0"
+    "rollup-plugin-typescript": "^1.0.0",
+    "ts-jest": "^22.0.0",
+    "tslib": "^1.9.3",
+    "typescript": "^3.2.1"
   },
   "jest": {
     "transform": {
