--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,5 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 .npmignore export-ignore
+.styleci.yml export-ignore
+.travis.yml export-ignore
