Add License information to the package.json file
As with a lot of js packages, adding this key to the package.json allows for better CI runs of license check.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": {
     "name": "Taylor Otwell"
   },
+  "license": "MIT",
   "homepage": "https://github.com/laravel/echo",
   "engines": {
     "node": ">6.0.*"
