--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-node_modules/
-dist/
+node_modules
+*.iml
+.idea
+*.log*
+.vscode
+.DS_Store
+coverage
+dist
 build/
-npm-debug.log
-package-lock.json
