--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "declarations": "./node_modules/.bin/tsc --emitDeclarationOnly",
     "prepublish": "npm run build",
     "release": "npm run test && standard-version && git push --follow-tags && npm publish",
+    "ls-lint": "npx @ls-lint/ls-lint",
     "test": "jest"
   },
   "devDependencies": {
@@ -40,7 +41,8 @@
     "standard-version": "^7.0.0",
     "ts-jest": "^24.1.0",
     "tslib": "^1.10.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "@ls-lint/ls-lint": "^1.5.0"
   },
   "engines": {
     "node": ">=8"
