--- a/package.json
+++ b/package.json
@@ -28,21 +28,25 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
+    "@babel/plugin-proposal-function-sent": "^7.8.3",
+    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
+    "@babel/plugin-proposal-throw-expressions": "^7.8.3",
+    "@babel/plugin-transform-object-assign": "^7.8.3",
+    "@babel/preset-env": "^7.9.6",
+    "@rollup/plugin-babel": "^5.0.0",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-preset-es2015-rollup": "^3.0.0",
-    "babel-preset-stage-2": "^6.24.1",
     "jest": "^24.9.0",
-    "rollup": "^1.21.2",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-typescript": "^1.0.1",
+    "rollup": "^2.10.2",
+    "rollup-plugin-typescript2": "^0.27.1",
     "standard-version": "^7.0.0",
     "ts-jest": "^24.1.0",
     "tslib": "^1.10.0",
     "typescript": "^3.6.3"
   },
   "engines": {
-    "node": ">=8"
+    "node": ">=10"
   }
 }
