Add ESLint with Typescript support

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,5 +18,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: ESLint
+        run: npm run lint
+
       - name: Execute tests
         run: npm test
