--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 * text=auto
 
 /.github export-ignore
+/art export-ignore
 /tests export-ignore
 .editorconfig export-ignore
 .gitattributes export-ignore
