--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@types/node": "^17.0.21",
         "@typescript-eslint/eslint-plugin": "^5.14.0",
         "@typescript-eslint/parser": "^5.14.0",
+        "ably": "^1.2.20",
         "eslint": "^8.11.0",
         "jest": "^27.5.1",
         "rollup": "^2.70.1",
