--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "ably": "^1.2.20",
         "eslint": "^8.11.0",
         "jest": "^27.5.1",
+        "jsonwebtoken": "^8.5.1",
         "rollup": "^2.70.1",
         "rollup-plugin-typescript2": "^0.31.2",
         "standard-version": "^9.3.2",
