--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@typescript-eslint/parser": "^5.14.0",
         "ably": "^1.2.20",
         "eslint": "^8.11.0",
+        "got": "^11.8.3",
         "jest": "^27.5.1",
         "jsonwebtoken": "^8.5.1",
         "rollup": "^2.70.1",
@@ -50,7 +51,8 @@
         "standard-version": "^9.3.2",
         "ts-jest": "^27.1.3",
         "tslib": "^2.3.1",
-        "typescript": "^4.6.2"
+        "typescript": "^4.6.2",
+        "wait-for-expect": "^3.0.2"
     },
     "engines": {
         "node": ">=10"
