--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -15,7 +15,9 @@ on:
   pull_request:
   push:
     branches:
-      - main
+      - master
+  schedule:
+    - cron: '0 0 * * 0' # Once in a week run codeql-analysis
 
 jobs:
   analyze:
