--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,9 @@ on:
   pull_request:
   push:
     branches:
-      - main
+      - master
+  schedule:
+    - cron: '0 0 * * 0' # Once in a week run tests to check assertions against updated(if any) ably-js package.
 
 jobs:
   tests:
