--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -24,6 +24,11 @@ jobs:
     name: Analyze
     runs-on: ubuntu-latest
 
+    permissions:
+        id-token: write
+        contents: write
+        security-events: write
+
     strategy:
       fail-fast: false
       matrix:
