--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
     "main": "dist/echo.common.js",
     "module": "dist/echo.js",
     "types": "dist/echo.d.ts",
+    "files": [
+        "dist"
+    ],
     "scripts": {
-        "build": "npm run compile && npm run declarations",
+        "build": "rimraf dist && npm run compile",
         "compile": "./node_modules/.bin/rollup -c",
         "declarations": "./node_modules/.bin/tsc --emitDeclarationOnly",
-        "lint": "eslint --ext .js,.ts ./src ./tests",
+        "lint": "eslint --ext .js,.ts ./src ./tests ./typings",
         "prepublish": "npm run build",
+        "typecheck": "tsc --noEmit",
+        "bundlesize": "npx bundlesize",
         "release": "npm run test && standard-version && git push --follow-tags && npm publish",
         "test": "jest"
     },
@@ -37,18 +42,22 @@
         "@babel/plugin-transform-object-assign": "^7.16.7",
         "@babel/preset-env": "^7.16.11",
         "@rollup/plugin-babel": "^5.3.1",
-        "@types/jest": "^27.4.1",
-        "@types/node": "^18.11.9",
-        "@typescript-eslint/eslint-plugin": "^5.14.0",
-        "@typescript-eslint/parser": "^5.14.0",
-        "eslint": "^8.11.0",
-        "jest": "^27.5.1",
+        "@rollup/plugin-json": "^6.0.0",
+        "@types/jest": "^29.5.1",
+        "@types/node": "^18.16.2",
+        "@typescript-eslint/eslint-plugin": "^5.59.1",
+        "@typescript-eslint/parser": "^5.59.1",
+        "bundlesize": "^0.18.1",
+        "eslint": "^8.39.0",
+        "jest": "^29.5.0",
+        "rimraf": "^5.0.0",
         "rollup": "^2.70.1",
-        "rollup-plugin-typescript2": "^0.31.2",
-        "standard-version": "^9.3.2",
-        "ts-jest": "^27.1.3",
-        "tslib": "^2.3.1",
-        "typescript": "^4.6.2"
+        "rollup-plugin-dts": "^5.3.0",
+        "rollup-plugin-esbuild": "^5.0.0",
+        "standard-version": "^9.5.0",
+        "ts-jest": "^29.1.0",
+        "tslib": "^2.5.0",
+        "typescript": "^5.0.4"
     },
     "engines": {
         "node": ">=10"
