--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "laravel-echo",
     "version": "1.15.0",
     "description": "Laravel Echo library for beautiful Pusher and Socket.IO integration",
+    "type": "module",
     "keywords": [
         "laravel",
         "pusher",
@@ -40,8 +41,8 @@
         "@babel/plugin-proposal-numeric-separator": "^7.16.7",
         "@babel/plugin-proposal-throw-expressions": "^7.16.7",
         "@babel/plugin-transform-object-assign": "^7.16.7",
-        "@babel/preset-env": "^7.16.11",
-        "@rollup/plugin-babel": "^5.3.1",
+        "@babel/preset-env": "^7.21.5",
+        "@rollup/plugin-babel": "^6.0.3",
         "@rollup/plugin-json": "^6.0.0",
         "@types/jest": "^29.5.1",
         "@types/node": "^18.16.2",
@@ -51,7 +52,7 @@
         "eslint": "^8.39.0",
         "jest": "^29.5.0",
         "rimraf": "^5.0.0",
-        "rollup": "^2.70.1",
+        "rollup": "^3.21.0",
         "rollup-plugin-dts": "^5.3.0",
         "rollup-plugin-esbuild": "^5.0.0",
         "standard-version": "^9.5.0",
