--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,18 +10,8 @@
         "inlineSourceMap": true,
         "skipLibCheck": true,
         "declaration": true,
-        "typeRoots": [
-            "node_modules/@types"
-        ],
-        "lib": [
-            "es2017",
-            "dom"
-        ],
+        "typeRoots": ["node_modules/@types"],
+        "lib": ["es2017", "dom"]
     },
-    "exclude": [
-        "node_modules",
-        "**/dist/**",
-        "**tests**",
-        "./**/*.d.ts"
-    ]
+    "exclude": ["node_modules", "**/dist/**", "**tests**", "./**/*.d.ts"]
 }
