--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
         "@typescript-eslint/parser": "^5.14.0",
         "eslint": "^8.11.0",
         "jest": "^27.5.1",
+        "pusher-js": "^8.0",
         "rollup": "^2.70.1",
         "rollup-plugin-typescript2": "^0.31.2",
+        "socket.io-client": "^4.0",
         "standard-version": "^9.3.2",
         "ts-jest": "^27.1.3",
         "tslib": "^2.3.1",
