--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "laravel-echo",
-    "version": "1.19.0",
+    "version": "2.0.0",
     "description": "Laravel Echo library for beautiful Pusher and Socket.IO integration",
     "keywords": [
         "laravel",
@@ -16,41 +16,59 @@
     "author": {
         "name": "Taylor Otwell"
     },
+    "type": "module",
     "main": "dist/echo.common.js",
     "module": "dist/echo.js",
     "types": "dist/echo.d.ts",
     "scripts": {
         "build": "npm run compile && npm run declarations",
-        "compile": "./node_modules/.bin/rollup -c",
-        "declarations": "./node_modules/.bin/tsc --emitDeclarationOnly",
-        "lint": "eslint --ext .js,.ts ./src ./tests",
+        "compile": "rollup -c",
+        "declarations": "tsc --emitDeclarationOnly",
+        "lint": "eslint --config eslint.config.mjs",
         "prepublish": "npm run build",
         "release": "npm run test && standard-version && git push --follow-tags && npm publish",
         "test": "jest"
     },
     "devDependencies": {
-        "@babel/plugin-proposal-decorators": "^7.17.2",
-        "@babel/plugin-proposal-export-namespace-from": "^7.16.7",
-        "@babel/plugin-proposal-function-sent": "^7.16.7",
-        "@babel/plugin-proposal-numeric-separator": "^7.16.7",
-        "@babel/plugin-proposal-throw-expressions": "^7.16.7",
-        "@babel/plugin-transform-object-assign": "^7.16.7",
-        "@babel/preset-env": "^7.16.11",
-        "@rollup/plugin-babel": "^5.3.1",
-        "@types/jest": "^27.4.1",
-        "@types/node": "^18.11.9",
-        "@typescript-eslint/eslint-plugin": "^5.14.0",
-        "@typescript-eslint/parser": "^5.14.0",
-        "eslint": "^8.11.0",
-        "jest": "^27.5.1",
-        "rollup": "^2.70.1",
-        "rollup-plugin-typescript2": "^0.31.2",
+        "@babel/core": "^7.26.7",
+        "@babel/plugin-proposal-decorators": "^7.25.9",
+        "@babel/plugin-proposal-function-sent": "^7.25.9",
+        "@babel/plugin-proposal-throw-expressions": "^7.25.9",
+        "@babel/plugin-transform-export-namespace-from": "^7.25.9",
+        "@babel/plugin-transform-numeric-separator": "^7.25.9",
+        "@babel/plugin-transform-object-assign": "^7.25.9",
+        "@babel/preset-env": "^7.26.7",
+        "@rollup/plugin-babel": "^6.0.0",
+        "@rollup/plugin-node-resolve": "^16.0.0",
+        "@rollup/plugin-typescript": "^12.1.2",
+        "@types/jest": "^29.5",
+        "@types/node": "^20.0.0",
+        "@typescript-eslint/eslint-plugin": "^8.21.0",
+        "@typescript-eslint/parser": "^8.21.0",
+        "eslint": "^9.0.0",
+        "jest": "^29.7.0",
+        "pusher-js": "^8.0",
+        "rollup": "^3.0.0",
+        "socket.io-client": "^4.0",
         "standard-version": "^9.3.2",
-        "ts-jest": "^27.1.3",
-        "tslib": "^2.3.1",
-        "typescript": "^4.6.2"
+        "ts-jest": "^29.2.5",
+        "typescript": "^5.7.0"
     },
     "engines": {
-        "node": ">=10"
+        "node": ">=20"
+    },
+    "exports": {
+        ".": {
+            "import": "./dist/echo.js",
+            "require": "./dist/echo.common.js",
+            "types": "./dist/echo.d.ts"
+        },
+        "./iife": "./dist/echo.iife.js"
+    },
+    "overrides": {
+        "glob": "^9.0.0"
+    },
+    "dependencies": {
+        "tslib": "^2.8.1"
     }
 }
