--- a/package.json
+++ b/package.json
@@ -55,6 +55,12 @@
         "tslib": "^2.8.1",
         "typescript": "^5.7.0"
     },
+    "typesVersions": {
+        "*": {
+            "socket.io-client": [],
+            "pusher-js": []
+        }
+    },
     "engines": {
         "node": ">=20"
     },
